--- a/motcroise/client/src/app/crosswords/difficulty/difficulty.component.html
+++ b/motcroise/client/src/app/crosswords/difficulty/difficulty.component.html
@@ -1,3 +1,14 @@
-<p>
-  difficulty works!
-</p>
+
+  <h1>Difficulty</h1>
+  <ul class="difficulties">
+    <li *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)">
+     <span class="badge">{{difficulty}}</span>
+    </li>
+  </ul>
+
+<div *ngIf="selectedDifficulty">
+
+  <h2>{{selectedDifficulty}}</h2>
+
+
+</div>
