Ajout des cases pour la grille

--- a/motcroise/client/src/app/crosswords/grid/grid.component.html
+++ b/motcroise/client/src/app/crosswords/grid/grid.component.html
@@ -1,8 +1,8 @@
 
 <div class="grid">
   <div class="row" *ngFor="let row of grid">
-    <div class="col" *ngFor="let col of row">
-      <app-square></app-square>
+    <div class="col" *ngFor="let case of row">
+      <app-square [case]="case"></app-square>
     </div>
   </div>
 </div>
