Quelque modifications et corrections

--- a/motcroise/client/src/app/crosswords/difficulty/difficulty.component.html
+++ b/motcroise/client/src/app/crosswords/difficulty/difficulty.component.html
@@ -1,10 +1,11 @@
-
+<div align="center">
   <h1>Difficulty</h1>
   <ul class="difficulties">
     <li *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)">
-     <span class="badge">{{difficulty}}</span>
+      <span class="badge">{{difficulty}}</span>
     </li>
   </ul>
+</div>
 
 <div *ngIf="selectedDifficulty">
 
