Grille clickable (evenement sur click). Valeur entrable dans case de grille. Debut de fonction pour entrer un mot (Pas fonctionnel)

--- a/client/src/app/crosswords/square/square.component.html
+++ b/client/src/app/crosswords/square/square.component.html
@@ -1,4 +1,5 @@
 
-<div class="square">
-	{{case.getChar()}}
-</div>
+<input class="square" [(ngModel)]="case._char" 
+[class.selected]="this.case.selected() == true"
+(click)="this.case.select()">
+
