SquareComponent est scrap, tout est dans grille et case. Methode de base pour entrer un mot lettre par lettre dans la grille. Verification de lettre inclut.

--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -7,3 +7,17 @@
 .row {
 	display: flex;
 }
+
+.square {
+	height: 20px;
+	width: 20px;
+	border: 1px solid #333;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-transform: uppercase;
+}
+.selected{
+	background-color: green;
+	color: white;
+}
