--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -1,8 +1,11 @@
 
-<div class="grid">
-  <div class="row" *ngFor="let row of grid">
+<div class="_grid">
+  <div class="row" *ngFor="let row of _grid">
     <div class="col" *ngFor="let case of row">
-      <app-square [case]="case"></app-square>
+      <input class="square" [(ngModel)]="case._char" 
+      [class.selected]="this.case.selected() == true"
+      (click)="this.selectCase(case)"
+      (ngModelChange)="nextCase()"> 
     </div>
   </div>
 </div>
