--- a/client/src/app/crosswords/clues/clues.component.html
+++ b/client/src/app/crosswords/clues/clues.component.html
@@ -1,9 +1,9 @@
 <div class="grid">
   <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)" >
-    {{ clue.getDesc() }}
+    {{ clue.desc }}
   </div>
 </div>
 
 <div *ngIf="selectedClue">
-  <h2>{{selectedClue.getDesc()}}</h2>
+  <h2>{{selectedClue.desc}}</h2>
 </div>
