--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -1,5 +1,8 @@
 
-
 <app-difficulty></app-difficulty>
 <app-clues></app-clues>
 <app-grid></app-grid>
+
+<p>
+  <app-enter-word></app-enter-word>
+</p>
