--- a/client/src/app/crosswords/clues/clues.component.html
+++ b/client/src/app/crosswords/clues/clues.component.html
@@ -1,6 +1,9 @@
-<div class="grid">
-  <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)" >
-    {{ clue.desc }}
+<div class="clues" >
+  <div class="row" *ngFor="let clue of clues" 
+  (click)="onSelect(clue)" >
+    <div [class.selected]="this._selectedClue == clue">
+      {{ clue.desc }}
+    </div>
   </div>
 </div>
 
