--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -1,11 +1,9 @@
-
-<div class="_grid">
-  <div class="row" *ngFor="let row of _grid">
-    <div class="col" *ngFor="let case of row">
-      <input class="square" [(ngModel)]="case._char" 
-      [class.selected]="this.case.selected() == true"
-      (click)="this.selectCase(case)"
-      (ngModelChange)="nextCase()"> 
+<div>
+  <div class="_grid">
+    <div class="row" *ngFor="let row of _grid; #i = i">
+      <div class="col" *ngFor="let case of row; #i = j">
+        <input class="square" (input)="validateChar($event.target.value, i, j)" maxlength="1"   />
+      </div>
     </div>
   </div>
 </div>
