--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -2,7 +2,7 @@
   <div class="_grid">
     <div class="row" *ngFor="let row of _grid;">
       <div class="col" *ngFor="let case of row;">
-        <input class="square" [ngModel]="case.char" (blur)="validateChar($event.target)" maxlength="1"   />
+        <input class="square" [ngModel]="case.char" (input)="validateChar($event)" maxlength="1"   />
       </div>
     </div>
   </div>
