correction dans la selection des mots dans la grille (mot associe et premiere lettre selection horizontal)

--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -16,7 +16,7 @@
   <h2>{{_word.name}}</h2>
   <h2>{{_word.col}}</h2>
   <h2>{{_word.row}}</h2>
-  <h2>{{_grid[_word.col][_word.row]._char}}</h2>
+  <h2>{{_grid[_word.row][_word.col]._char}}</h2>
 
 </div>
 <div *ngIf="_selectedCase">
