Added header background

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -1,3 +1,16 @@
-<app-difficulty></app-difficulty>
-<app-clues></app-clues>
-<app-grid></app-grid>
+
+<main>
+
+  <header class="header">
+    <div class="header-background">
+      <span class="stripe-1"></span>
+      <span class="stripe-2"></span>
+      <span class="stripe-3"></span>
+      <span class="stripe-4"></span>
+    </div>
+  </header>
+
+  <app-difficulty></app-difficulty>
+  <app-clues></app-clues>
+  <app-grid></app-grid>
+</main>
