Created box and containers

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -10,7 +10,20 @@
     </div>
   </header>
 
-  <app-difficulty></app-difficulty>
-  <app-clues></app-clues>
-  <app-grid></app-grid>
+  <ui-container>
+
+    <ui-shadow-box>
+      <app-difficulty></app-difficulty>
+    </ui-shadow-box>
+
+    <ui-shadow-box>
+      <app-clues></app-clues>
+    </ui-shadow-box>
+
+    <ui-shadow-box>
+      <app-grid></app-grid>
+    </ui-shadow-box>
+
+  </ui-container>
+
 </main>
