New buttons style

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -8,13 +8,15 @@
       <span class="stripe-3"></span>
       <span class="stripe-4"></span>
     </div>
+    <ui-container>
+      <div id="header-content">
+        <h1>Crossword</h1>
+        <app-difficulty></app-difficulty>
+      </div>
+    </ui-container>
   </header>
 
   <ui-container>
-
-    <ui-shadow-box>
-      <app-difficulty></app-difficulty>
-    </ui-shadow-box>
 
     <ui-shadow-box>
       <app-clues></app-clues>
