--- a/client/src/app/crosswords/crossword/crossword.component.css
+++ b/client/src/app/crosswords/crossword/crossword.component.css
@@ -1,3 +1,9 @@
+#header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 120px 0;
+}
 
 .header-background {
     position: absolute;
