--- a/client/src/app/crosswords/difficulty/difficulty.component.html
+++ b/client/src/app/crosswords/difficulty/difficulty.component.html
@@ -1,17 +1,3 @@
-<head>
-  <link href="difficulty.component.css">
-</head>
-
-<div align="center">
-  <h1>Crossword Difficulty</h1>
-  <button class ="button" *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)">
-    <span class="badge">{{difficulty}}</span>
-  </button>
-</div>
-
-<div *ngIf="selectedDifficulty">
-
-    <h2>{{selectedDifficulty}}</h2>
-
-
-</div>
+<ui-button *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)" [active]="selectedDifficulty == difficulty">
+  {{difficulty}}
+</ui-button>
