--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -10,7 +10,7 @@
     </div>
     <ui-container>
       <div id="header-content">
-        <h1>Crossword</h1>
+        <h1 class="big-title">Crossword</h1>
         <app-difficulty></app-difficulty>
       </div>
     </ui-container>
