--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -18,13 +18,15 @@
 
   <ui-container>
 
-    <ui-shadow-box>
-      <app-clues></app-clues>
-    </ui-shadow-box>
-
-    <ui-shadow-box>
-      <app-grid></app-grid>
-    </ui-shadow-box>
+    <div class="inline-boxes">
+        <ui-shadow-box>
+          <app-clues></app-clues>
+        </ui-shadow-box>
+    
+        <ui-shadow-box>
+          <app-grid></app-grid>
+        </ui-shadow-box>
+    </div>
 
   </ui-container>
 
