--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="_grid">
+  <div class="grid">
     <div class="row" *ngFor="let row of _grid;">
       <div class="col" *ngFor="let case of row;">
         <input class="square" [ngModel]="case.char" (keypress)="validateChar($event)" maxlength="1" 
@@ -8,19 +8,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div *ngIf="_word">
-
-  <h2>{{_word.name}}</h2>
-  <h2>{{_word.col}}</h2>
-  <h2>{{_word.row}}</h2>
-  <h2>{{_grid[_word.col][_word.row]._char}}</h2>
-
-</div>
-<div *ngIf="_selectedCase">
-
-  <h2>{{_selectedCase._char}}</h2>
-
-
 </div>
