--- a/client/src/app/crosswords/crossword/crossword.component.css
+++ b/client/src/app/crosswords/crossword/crossword.component.css
@@ -48,3 +48,10 @@
    grid-row: 2;
    grid-column: 3;
 }
+
+.inline-boxes {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
