--- a/client/src/app/crosswords/clues/clues.component.css
+++ b/client/src/app/crosswords/clues/clues.component.css
@@ -3,7 +3,14 @@
     width: 100%;
 }
 
-.selected{
-	background-color: green;
-	color: white;
+.clue {
+    padding: 6px 12px;
+    margin: 0 -12px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 2px;
+}
+
+.clue:hover, .clue.selected {
+	background-color: #f1f1f1;
 }
