--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -1,5 +1,5 @@
 <app-difficulty></app-difficulty>
 <div (clickOutside)="unselect()">
-` <app-clues></app-clues>
+  <app-clues></app-clues>
   <app-grid></app-grid>
 </div>
