disable input ajouté quand case.validated est true

--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -2,7 +2,7 @@
   <div class="_grid">
     <div class="row" *ngFor="let row of _grid;">
       <div class="col" *ngFor="let case of row;">
-          <input class="square" [ngModel]="case.char" (keypress)="validateChar($event, case)" (keyup)="eraseLetter($event, case)" maxlength="1" 
+          <input [disabled]="case.validated" class="square" [ngModel]="case.char" (keypress)="validateChar($event, case)" (keyup)="eraseLetter($event, case)" maxlength="1" 
           [class.selected]="case.selected() === true"
           (click)=selectCaseFromGrid(case)
           id={{case.id}}  />
