--- a/client/src/app/crosswords/grid/grid.component.css
+++ b/client/src/app/crosswords/grid/grid.component.css
@@ -25,6 +25,7 @@
 .square.is-black {
     background-color: #000;
     color: #000;
+    pointer-events: none;
 }
 
 .col input {
@@ -34,4 +35,8 @@
 .col input:focus{
     outline: none;
     border: 3px solid black;
+}
+
+.col input:disabled {
+    background-color: rgba(34, 75, 22, 0.301);
 }
