Setup de Scene THREE.js

--- a/client/src/app/race/track-creation/track-creation.component.html
+++ b/client/src/app/race/track-creation/track-creation.component.html
@@ -1,3 +1,6 @@
-<div>
-  <canvas class="container"></canvas>
-</div>
+
+  <h1>
+    Racing Track Construction
+  </h1>
+  <div #container>
+  </div>
