--- a/client/src/app/race/track-creation/track-creation.component.css
+++ b/client/src/app/race/track-creation/track-creation.component.css
@@ -1,6 +1,3 @@
-.container {
-    width: 100%;
-    height: 800px;
-    border-style: solid;
-    border-color: black;
+h1 {
+    color: blueviolet;
 }
