Fonction pour placer des petits carree sur position du click. (points a venir) Position fautive.

--- a/client/src/app/race/track-creation/track-creation.component.html
+++ b/client/src/app/race/track-creation/track-creation.component.html
@@ -2,5 +2,9 @@
   <h1>
     Racing Track Construction
   </h1>
-  <div #container>
-  </div>
+  <div #container></div>
+  <h2 id="x"></h2>
+  <h2 id="width"></h2>
+  <h2 id="y"></h2>
+  <h2 id="height"></h2>
+
