Added game modes buttons
Single player and two players mode

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -11,6 +11,7 @@
         <div id="header-content">
           <h1 class="big-title">Crossword</h1>
           <app-difficulty></app-difficulty>
+          <app-mode></app-mode>
         </div>
       </ui-container>
     </header>
