Modification de la fonction findCoordinate permettant l'affichage des points à l'endroit cliqué (+ changement de camera à OrthographicCamera

--- a/client/src/app/race/track-creation/track-creation.component.html
+++ b/client/src/app/race/track-creation/track-creation.component.html
@@ -2,6 +2,6 @@
   <h1>
     Racing Track Construction
   </h1>
-  <div #container></div>
+  <div id="1" #container oncontextmenu="return false"></div>
 
 
