--- a/client/src/app/crosswords/mode/mode.component.html
+++ b/client/src/app/crosswords/mode/mode.component.html
@@ -2,5 +2,5 @@
   {{mode}}
 </ui-button>
 <ui-button (click)="createGame(selectedMode)">Create Game</ui-button>
- 
+<ui-button (click)= "joinGame('test')">Join Game</ui-button>
 
