--- a/client/src/app/crosswords/shadow-box/shadow-box.component.css
+++ b/client/src/app/crosswords/shadow-box/shadow-box.component.css
@@ -1,7 +1,7 @@
 .box {
     background-color: #fff;
     padding: 20px 30px;
-    box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
     border-radius: 6px;
     margin-bottom: 20px;
 }
