--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,21 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
- html,
- body {
-   margin: 0;
-   padding: 0;
-   overflow-x: hidden;
- }
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 
- * {
-   box-sizing: border-box;
- }
+* {
+    box-sizing: border-box;
+}
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 300;
 }
 
-h1, h2, h3 {
-    font-family: 'Lilita One', 'cursive';
+h1,
+h2,
+h3 {
+    font-family: "Lilita One", "cursive";
 }
