--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -3,7 +3,7 @@
     <div class="row" *ngFor="let row of _grid;">
       <div class="col" *ngFor="let case of row;">
           <input [disabled]="case.validated" class="square" [ngModel]="case.char" (keypress)="validateChar($event, case)" (keyup)="eraseLetter($event, case)" maxlength="1" 
-          [class.selected]="case.selected() === true"
+          [class.selected]="case.selected()"
           [class.is-black]="case.char === '-'"      
           (click)=selectCaseFromGrid(case)
           id={{case.id}}  />
