--- a/client/src/app/crosswords/clues/clues.component.html
+++ b/client/src/app/crosswords/clues/clues.component.html
@@ -1,7 +1,7 @@
 <div class="clues">
   <h2>Vertical</h2>
   <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)">
-    <div *ngIf="clue.direction===1">
+    <div *ngIf="clue.orientation===1">
       <div class="clue" [class.selected]="this._selectedClue == clue">
         {{ clue.desc }}
       </div>
@@ -9,7 +9,7 @@
   </div>
   <h2>Horizontal</h2>
   <div class="row" *ngFor="let clue of clues" (click)="onSelect(clue)">
-    <div *ngIf="clue.direction===0">
+    <div *ngIf="clue.orientation===0">
       <div class="clue" [class.selected]="this._selectedClue == clue">
         {{ clue.desc }}
       </div>
