Added functions to display games from db
toggle display of games in db

--- a/client/src/app/crosswords/mode/mode.component.html
+++ b/client/src/app/crosswords/mode/mode.component.html
@@ -2,5 +2,8 @@
   {{mode}}
 </ui-button>
 <ui-button (click)="createGame(selectedMode)">Create Game</ui-button>
-<ui-button (click)= "joinGame('test')">Join Game</ui-button>
+<ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
+<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games">{{game}}</button>
+
+
 
