--- a/client/src/app/crosswords/grid/grid.component.html
+++ b/client/src/app/crosswords/grid/grid.component.html
@@ -1,8 +1,8 @@
 <div>
   <div class="grid">
-    <div class="row" *ngFor="let row of _grid;">
+    <div class="row" *ngFor="let row of _gridService.grid;">
       <div class="col" *ngFor="let case of row;">
-          <input [disabled]="case.validated" class="square" [ngModel]="case.char" (keypress)="validateChar($event, case)" (keyup)="eraseLetter($event, case)" maxlength="1" 
+          <input [disabled]="case.validated" class="square" [ngModel]="case.char" (keypress)="updateGrid($event, case)" (keyup)="updateGrid($event, case)" maxlength="1" 
           [class.selected]="case.selected()"
           [class.is-black]="case.char === '-'"      
           (click)=selectCaseFromGrid(case)
