Added condition to verify available games with 1 player
and joinGame function added to displayed available games

--- a/client/src/app/crosswords/mode/mode.component.html
+++ b/client/src/app/crosswords/mode/mode.component.html
@@ -3,7 +3,7 @@
 </ui-button>
 <ui-button (click)="createGame(selectedMode)">Create Game</ui-button>
 <ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
-<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games">{{game}}</button>
+<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game)">{{game}}</button>
 
 
 
