ajout nom joueur

--- a/client/src/app/crosswords/mode/mode.component.html
+++ b/client/src/app/crosswords/mode/mode.component.html
@@ -5,7 +5,9 @@
 <ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
 <button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game)">{{game}}</button>
 
-<input type="text" [(ngModel)]="input"/>{{input}}
+<!-- <input type="text" [(ngModel)]="input"/>{{input}} -->
 
 
 
+<input #box (keyup.enter)="onEnter(box.value)">
+{{value}}
