--- a/client/src/app/crosswords/mode/mode.component.html
+++ b/client/src/app/crosswords/mode/mode.component.html
@@ -3,11 +3,11 @@
 </ui-button>
 <ui-button (click)="createGame(selectedMode)">Create Game</ui-button>
 <ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
-<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game)">{{game}}</button>
+<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game.name)">{{game.players[0]}}</button>
 
 <!-- <input type="text" [(ngModel)]="input"/>{{input}} -->
 
 
 
-<input #box (keyup.enter)="onEnter(box.value)">
-{{value}}
+<input (input)="onEnter($event.target.value)">
+{{player}}
