ajout menu popup

--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -1,5 +1,6 @@
 
-<!-- <button mat-button (click)="openDialog()">Open dialog</button>
+<button mat-button (click)="onNoClick()">Open dialog</button>
+
 
 
 <ui-button *ngFor = "let mode of modes" (click)="onSelect(mode)" [active]="selectedMode == mode">
@@ -9,11 +10,12 @@
 <ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
 <button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game.name)">{{game.players[0]}}</button>
 
-<input type="text" [(ngModel)]="input"/>{{input}} -->
+<!-- <input type="text" [(ngModel)]="input"/>{{input}} -->
 
 
-<!-- 
+
 <input (input)="onEnter($event.target.value)">
 {{player}}
 
-<mat-spinner></mat-spinner> -->
+
+<div>sbdus</div>
