--- a/client/src/app/crosswords/difficulty/difficulty.component.html
+++ b/client/src/app/crosswords/difficulty/difficulty.component.html
@@ -1,3 +1,3 @@
-<ui-button *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)" [active]="selectedDifficulty == difficulty">
+<button *ngFor="let difficulty of difficulties" (click)="onSelect(difficulty)" [class.active]="selectedDifficulty == difficulty">
   {{difficultyName(difficulty)}}
-</ui-button>
+</button>
