--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -19,3 +19,48 @@ body {
 h1, h2, h3 {
     font-family: 'Lilita One', 'cursive';
 }
+
+button {
+	background-color: #fff;
+	border: none;
+	color: #605F5E;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin-left: 10px;
+	border-radius: 50px;
+	box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+	cursor: pointer;
+	transition: all ease 0.2s;
+}
+
+button:hover, button.active {
+	background-color: #247BA0;
+	box-shadow: 0 2px 12px rgba(0,0,0,0.20);
+	color: #fff;
+}
+
+button:focus {
+	outline: 0px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.inline-box {
+	display: flex;
+	justify-content: center;
+}
+
+.box {
+    background-color: #fff;
+    padding: 20px 30px;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+    border-radius: 6px;
+	margin-bottom: 20px;
+	margin-right: 20px;
+}
