--- a/client/src/app/crosswords/crossword/crossword.component.css
+++ b/client/src/app/crosswords/crossword/crossword.component.css
@@ -1,6 +1,6 @@
 #header-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 30px 0 40px;
 }
