--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -1,19 +1,27 @@
-
-<button mat-button (click)="onNoClick()">Open dialog</button>
-
-<app-difficulty></app-difficulty>
-
-<ui-button *ngFor = "let mode of modes" (click)="onSelect(mode)" [active]="selectedMode == mode">
+<ui-button *ngFor="let mode of modes" (click)="onSelect(mode)" [active]="selectedMode == mode">
   {{mode}}
 </ui-button>
-<ui-button (click)="createGame(selectedMode)">Create Game</ui-button>
-<ui-button (click)= "addGames(); toggleShowGames()">Join Game</ui-button>
-<button [ngClass] = "{ 'hide': !showGames, 'show': showGames}" *ngFor = "let game of games" (click) = "joinGame(game.name)">{{game.players[0]}}</button>
-
-<!-- <input type="text" [(ngModel)]="input"/>{{input}} -->
 
 
+<div [hidden]="showDifficulty">
+  <app-difficulty (click)="isDifficultySelected()"></app-difficulty>
+</div>
 
-<input (input)="onEnter($event.target.value)">
-{{player}}
+<div [hidden]="!startSoloGame()">
+  <ui-button (click)="closeDialog()">Start Game</ui-button>
+</div>
 
+<div [hidden]="!isMultiPlayer()">
+  Please enter your name:
+  <input (input)="onEnter($event.target.value)"> {{player}}
+
+
+  <div *ngIf="player.length > 2">
+
+
+    <ui-button (click)="createGame(selectedMode); closeDialog()">Create Game</ui-button>
+    <ui-button (click)="addGames(); toggleShowGames()">Join Game</ui-button>
+    <button [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games" (click)="joinGame(game.name)">{{game.players[0]}}</button>
+  </div>
+
+</div>
