ajout waiting ofr connection menu

--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -24,7 +24,7 @@
 
     <ui-button (click)="createGame(selectedMode); closeDialog()">Create Game</ui-button>
     <ui-button (click)="addGames(); toggleShowGames()">Join Game</ui-button>
-    <button [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games" (click)="joinGame(game.name)">{{game.players[0]}}</button>
+    <button [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games" (click)="joinGame(game.name); closeDialog()">{{game.players[0]}}</button>
   </div>
 
 </div>
