--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,2 @@
-<<<<<<< HEAD
-<app-track-creation></app-track-creation>>
-=======
 
-<router-outlet></router-outlet>
-
-
->>>>>>> 662b00dc133b327cefbbc3b85ceb08ddb06c58e4
+<app-track-creation></app-track-creation>
