--- a/client/src/app/race/track-creation/track-creation.component.html
+++ b/client/src/app/race/track-creation/track-creation.component.html
@@ -6,10 +6,10 @@
 	(mousedown)="onKeyDown($event)"
   (mouseup)="onKeyUp($event)"></div>
   <div>
-    <button (click)="save()">save game</button>
+    <button (click)="save()">save track</button>
   </div>
   <div *ngIf="_isSaved">
-    Game is saved!
+    track is saved!
   </div>
 
 
