--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="input-row" *ngIf="player.length > 2">
-      <button (click)="createGame(selectedMode); closeDialog()">Create Game</button>
+      <button (click)="createGame(selectedMode)">Create Game</button>
       <button (click)="addGames(); toggleShowGames()">Join Game</button>
       <button [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games" (click)="joinGame(game.name); closeDialog()">{{game.players[0]}}</button>
     </div>
