--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -1,10 +1,11 @@
 <div *ngIf="!isWaitingForPlayer()">
   <h1>Welcome {{player}}!</h1>
 
-  <button *ngFor="let mode of modes" (click)="onSelect(mode)" [class.active]="selectedMode == mode">
-    {{mode}}
-  </button>
-
+  <div class="input-row">
+    <button *ngFor="let mode of modes" (click)="onSelect(mode)" [class.active]="selectedMode == mode">
+      {{mode}}
+    </button>
+  </div>
 
   <div class="input-row" [hidden]="showDifficulty">
     <app-difficulty (click)="isDifficultySelected()"></app-difficulty>
@@ -24,13 +25,29 @@
     <div class="input-row" *ngIf="player.length > 2">
       <button (click)="createGame(selectedMode)">Create Game</button>
       <button (click)="addGames(); toggleShowGames()">Join Game</button>
-      <button [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games" (click)="joinGame(game.name); closeDialog()">{{game.players[0]}}</button>
+    </div>
+
+    <div class="players-container">
+     <div class="players" [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games">
+        <div class="players-left">
+            <b>Name: </b>: {{game.name}} <br/>
+            <b>Player: </b>: {{game.players[0]}} <br/>
+            <b>Difficulty: </b>: {{game.difficulty}}
+        </div>
+        <div class="players-right">
+            <button (click)="joinGame(game.name); closeDialog()">Join</button>
+        </div>
+      </div>
     </div>
 
   </div>
 </div>
 
 <div *ngIf="isWaitingForPlayer()">
-  <h2>Waiting for another player to join</h2>
-  <mat-spinner></mat-spinner>
+  <div class="waiting-connection">
+    <h2>Waiting for another player to join</h2>
+    <div class="spinner">
+        <mat-spinner color="warn"></mat-spinner>
+    </div>
+  </div>
 </div>
