Added mode to games list

--- a/client/src/app/crosswords/mode/mode.component.popup.html
+++ b/client/src/app/crosswords/mode/mode.component.popup.html
@@ -30,7 +30,7 @@
     <div class="players-container">
      <div class="players" [ngClass]="{ 'hide': !showGames, 'show': showGames}" *ngFor="let game of games">
         <div class="players-left">
-            <b>Name: </b>: {{game.name}} <br/>
+            <b>Mode</b>: Multiplayer <br/>
             <b>Player: </b>: {{game.players[0]}} <br/>
             <b>Difficulty: </b>: {{game.difficulty}}
         </div>
