Changed initial values of mode component attributes

--- a/client/src/app/crosswords/mode/mode.component.mode.html
+++ b/client/src/app/crosswords/mode/mode.component.mode.html
@@ -7,7 +7,7 @@
       </button>
     </div>
   
-    <div class="input-row" [hidden]="showDifficulty">
+    <div class="input-row" [hidden]="!showDifficulty">
       <app-difficulty (click)="isDifficultySelected()"></app-difficulty>
     </div>
   
