Fix display opponent name

--- a/client/src/app/crosswords/crossword/crossword.component.html
+++ b/client/src/app/crosswords/crossword/crossword.component.html
@@ -25,7 +25,7 @@
           <div class="box">
             <b>Mode: </b>{{selectedMode}}
             <div *ngIf="selectedMode === 'Two Players'">
-              <b>Playing against: </b> {{opponnentName()}}
+              <b>Playing against: </b> {{opponnentName}}
             </div>  
           </div>
           <div class="box">
